--- a/videos.html
+++ b/videos.html
@@ -41,7 +41,7 @@
                 </div>
             </nav>
         </main>
-        <div class="container-fluid">
+        <div class="container-fluid py-5 px-5">
             <div class="row">
                 <div class="col-lg-3 my-lg-auto">
                     <!-- 왼쪽 영상 -->
@@ -51,7 +51,7 @@
                     </div>
                     <p class="text-secondary mb-0 mt-3">맨시티의 트레블 달성 순간을 감상해보세요!</p>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 px-5">
                     <div class="row gx-0">
                         <div class="col-lg-4">
                             <!-- 오른쪽 상단 영상 -->
