--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
             <!-- Projects Section-->
             <section class="py-5">
                 <div class="container px-5 mb-5">
-                    <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
+                    <div class="text-center mb-5 py-5">
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -53,10 +53,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">축구 포털 사이트 Footflix</h2>
+                                            <p>  저희의 목표는 다양한 축구 컨텐츠 취합을 통해 간편하고 빠르게 축구 소식을 종합해서 제공하는 것입니다. 영상 모음, 팀별 소식 모음, 축구 정보 모음은 그것을 가능하게 할 것입니다.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/F (3).jpg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -65,10 +65,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">서비스 주요 기능</h2>
+                                            <p>#하이라이트 영상 모음 : 인기 영상 추천을 통해 최신 영상이 아니더라도 관심을 가질만한 영상을 추천합니다. 여러 채널이 흩어져있는 최신 영상을 한 번에 모아서 볼 수 있습니다. #팀별 소식 모음 : 여러 사이트에 흩어져있는 클럽의 정보를 한 번에 모아서 볼 수 있습니다. #축구 정보 모음 : 전체적인 리그 진행 상황이나 사이트에서 미처 제공하지 못한 정보를 직접 확인하도록 도와드립니다. 외부 사이트를 통해 뉴스, 통계를 더 자세히 알아보세요.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/about.jpg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -80,14 +80,51 @@
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
+                        <h2 class="display-4 fw-bolder mb-4">여러분의 의견을 들려주세요!</h2>
                         <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>
                     </div>
                 </div>
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
+        <footer class="bg-dark py-4 mt-auto text-light">
+            <div class="text-center">
+                <h5 class="section-heading text-light">Site Map</h5>
+            </div>
+            <div class="container pt-2 mb-4">
+                <div class="row justify-content-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="index.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Main</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="fixtures.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Fixtures</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="tables.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Tables</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="news.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">News</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="videos.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Videos</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="leagues.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Leagues</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="teams.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Teams</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="sites.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Sites</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="about.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">About</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="contact.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
