--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Footflix - 어제 축구 봤음?</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/F (1).jpg" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -111,7 +111,7 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    <img class="profile-img" src="assets/profile.png" alt="..." />
+                                    <img class="profile-img" src="assets/F (2).jpg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -135,96 +135,96 @@
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">최신 뉴스</h2>
-                        <h3 class="section-subheading text-muted pb-2">Lorem ipsum dolor sit amet consectetur.</h3>
+                        <h3 class="section-subheading text-muted pb-2">Footflix에서 최신 축구 뉴스를 확인하세요.</h3>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-sm-6 mb-4">
                             <!-- Portfolio item 1-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=109&aid=0004870307">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/minjaemanu.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Threads</div>
-                                    <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                    <div class="portfolio-caption-heading">김민재 맨유 확정?</div>
+                                    <div class="portfolio-caption-subheading text-muted">'이적료 825억-연봉 145억' 맨유, 김민재 영입한다... 7월 시작과 함께 전격 공개... 베팅 사이트 김민재 맨유행 삭제-이적 인정</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 mb-4">
                             <!-- Portfolio item 2-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=413&aid=0000161330">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/ham.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Explore</div>
-                                    <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                    <div class="portfolio-caption-heading">햄자르</div>
+                                    <div class="portfolio-caption-subheading text-muted">'1426억' 벨링엄, 아직 '레알 역대 이적료 1위' 아니다 '1592억 그녀석 때문에'</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 mb-4">
                             <!-- Portfolio item 3-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=413&aid=0000161332">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/gogangin.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Finish</div>
-                                    <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                    <div class="portfolio-caption-heading">진짜 가나?</div>
+                                    <div class="portfolio-caption-subheading text-muted">"이강인, PSG 메디컬 통과-확정적 합의 없어…이번 주 결정 안 될 수도" (西 마르카)</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                             <!-- Portfolio item 4-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=477&aid=0000434643">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/croatia.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Lines</div>
-                                    <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                    <div class="portfolio-caption-heading">크로아티아의 네이션스 리그 결승 진출</div>
+                                    <div class="portfolio-caption-subheading text-muted">[UNL REVIEW] 크로아티아 첫 우승 노린다…네덜란드 적지서 4-2 승리 '결승 진출'</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                             <!-- Portfolio item 5-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=109&aid=0004870277">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/um.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Southwest</div>
-                                    <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                    <div class="portfolio-caption-heading">음바페의 GOAT 리스펙트</div>
+                                    <div class="portfolio-caption-subheading text-muted">"메시 떠나는 데 왜 그렇게 좋아해?" 음바페, '축신' 대우 놓고 자국팬들 맹비난</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <!-- Portfolio item 6-->
                             <div class="portfolio-item">
-                                <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                                <a class="portfolio-link" href="https://sports.news.naver.com/news?oid=076&aid=0004019539">
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/heung.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Window</div>
-                                    <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                    <div class="portfolio-caption-heading">우리흥</div>
+                                    <div class="portfolio-caption-subheading text-muted">'탈장 수술' SON이 밝힌 충격 비하인드 "8~9개월간 부상 참고 뛰었다"</div>
                                 </div>
                             </div>
                         </div>
@@ -234,6 +234,43 @@
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto text-light">
+            <div class="text-center">
+                <h5 class="section-heading text-light">Site Map</h5>
+            </div>
+            <div class="container pt-2 mb-4">
+                <div class="row justify-content-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="index.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Main</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="fixtures.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Fixtures</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="tables.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Tables</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="news.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">News</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="videos.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Videos</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="leagues.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Leagues</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="teams.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Teams</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="sites.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Sites</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="about.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">About</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="contact.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
