--- a/tables.html
+++ b/tables.html
@@ -115,7 +115,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-12">
                             <div class="text-center">
-                                <h5 class="section-heading text-uppercase">EPL Table</h5>
+                                <h5 class="section-heading text-uppercase">LaLiga Table</h5>
                             </div>
                             <table class="table">
                                 <thead>
@@ -133,42 +133,42 @@
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>Manchester city</td>
+                                        <td>FC Barcelona</td>
                                         <td>38</td>
                                         <td>28</td>
-                                        <td>5</td>
-                                        <td>5</td>
-                                        <td>61</td>
-                                        <td>89</td>
+                                        <td>4</td>
+                                        <td>6</td>
+                                        <td>50</td>
+                                        <td>88</td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
-                                        <td>Arsenal</td>
+                                        <td>Real Madrid CF</td>
                                         <td>38</td>
-                                        <td>26</td>
+                                        <td>24</td>
                                         <td>6</td>
-                                        <td>6</td>
-                                        <td>45</td>
-                                        <td>84</td>
+                                        <td>8</td>
+                                        <td>39</td>
+                                        <td>78</td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
-                                        <td>Manchester United</td>
+                                        <td>Atlético de Madrid</td>
                                         <td>38</td>
                                         <td>23</td>
-                                        <td>6</td>
-                                        <td>9</td>
-                                        <td>15</td>
-                                        <td>75</td>
+                                        <td>8</td>
+                                        <td>7</td>
+                                        <td>37</td>
+                                        <td>77</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>Newcastle United</td>
+                                        <td>Real Sociedad</td>
                                         <td>38</td>
-                                        <td>19</td>
-                                        <td>14</td>
-                                        <td>5</td>
-                                        <td>35</td>
+                                        <td>21</td>
+                                        <td>8</td>
+                                        <td>9</td>
+                                        <td>16</td>
                                         <td>71</td>
                                     </tr>
                                 </tbody>
@@ -182,7 +182,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-12">
                             <div class="text-center">
-                                <h5 class="section-heading text-uppercase">EPL Table</h5>
+                                <h5 class="section-heading text-uppercase">Serie A Table</h5>
                             </div>
                             <table class="table">
                                 <thead>
@@ -200,43 +200,43 @@
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>Manchester city</td>
+                                        <td>SSC Napoli</td>
                                         <td>38</td>
                                         <td>28</td>
-                                        <td>5</td>
-                                        <td>5</td>
-                                        <td>61</td>
-                                        <td>89</td>
+                                        <td>6</td>
+                                        <td>4</td>
+                                        <td>49</td>
+                                        <td>90</td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
-                                        <td>Arsenal</td>
+                                        <td>SS Lazio</td>
                                         <td>38</td>
-                                        <td>26</td>
-                                        <td>6</td>
-                                        <td>6</td>
-                                        <td>45</td>
-                                        <td>84</td>
+                                        <td>22</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>30</td>
+                                        <td>74</td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
-                                        <td>Manchester United</td>
+                                        <td>FC Internazionale Milano</td>
                                         <td>38</td>
                                         <td>23</td>
-                                        <td>6</td>
-                                        <td>9</td>
-                                        <td>15</td>
-                                        <td>75</td>
+                                        <td>3</td>
+                                        <td>12</td>
+                                        <td>29</td>
+                                        <td>72</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>Newcastle United</td>
+                                        <td>AC Milan</td>
                                         <td>38</td>
-                                        <td>19</td>
-                                        <td>14</td>
-                                        <td>5</td>
-                                        <td>35</td>
-                                        <td>71</td>
+                                        <td>20</td>
+                                        <td>10</td>
+                                        <td>8</td>
+                                        <td>21</td>
+                                        <td>70</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -249,7 +249,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-12">
                             <div class="text-center">
-                                <h5 class="section-heading text-uppercase">EPL Table</h5>
+                                <h5 class="section-heading text-uppercase">Bundesliga Table</h5>
                             </div>
                             <table class="table">
                                 <thead>
@@ -267,43 +267,43 @@
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>Manchester city</td>
-                                        <td>38</td>
-                                        <td>28</td>
+                                        <td>FC Bayern München</td>
+                                        <td>34</td>
+                                        <td>21</td>
+                                        <td>8</td>
                                         <td>5</td>
-                                        <td>5</td>
-                                        <td>61</td>
-                                        <td>89</td>
+                                        <td>54</td>
+                                        <td>71</td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
-                                        <td>Arsenal</td>
-                                        <td>38</td>
-                                        <td>26</td>
-                                        <td>6</td>
-                                        <td>6</td>
-                                        <td>45</td>
-                                        <td>84</td>
+                                        <td>Borussia Dortmund</td>
+                                        <td>34</td>
+                                        <td>22</td>
+                                        <td>5</td>
+                                        <td>7</td>
+                                        <td>39</td>
+                                        <td>71</td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
-                                        <td>Manchester United</td>
-                                        <td>38</td>
-                                        <td>23</td>
+                                        <td>RB Leipzig</td>
+                                        <td>34</td>
+                                        <td>20</td>
                                         <td>6</td>
-                                        <td>9</td>
-                                        <td>15</td>
-                                        <td>75</td>
+                                        <td>8</td>
+                                        <td>23</td>
+                                        <td>66</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>Newcastle United</td>
-                                        <td>38</td>
-                                        <td>19</td>
-                                        <td>14</td>
-                                        <td>5</td>
-                                        <td>35</td>
-                                        <td>71</td>
+                                        <td>FC Union Berlin</td>
+                                        <td>34</td>
+                                        <td>18</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>13</td>
+                                        <td>62</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -314,6 +314,43 @@
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto text-light">
+            <div class="text-center">
+                <h5 class="section-heading text-light">Site Map</h5>
+            </div>
+            <div class="container pt-2 mb-4">
+                <div class="row justify-content-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="index.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Main</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="fixtures.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Fixtures</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="tables.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Tables</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="news.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">News</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="videos.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Videos</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="leagues.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Leagues</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="teams.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Teams</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="sites.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Sites</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="about.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">About</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="contact.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
