--- a/leagues.html
+++ b/leagues.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="teams.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">PL</div>
@@ -61,7 +61,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="teams.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">LaLiga</div>
@@ -72,7 +72,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="teams.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">SERIE A</div>
@@ -83,7 +83,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="teams.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">BUNDESLIGA</div>
@@ -97,7 +97,44 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
+        <footer class="bg-dark py-4 mt-auto text-light">
+            <div class="text-center">
+                <h5 class="section-heading text-light">Site Map</h5>
+            </div>
+            <div class="container pt-2 mb-4">
+                <div class="row justify-content-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="index.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Main</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="fixtures.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Fixtures</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="tables.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Tables</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="news.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">News</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="videos.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Videos</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="leagues.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Leagues</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="teams.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Teams</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="sites.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Sites</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="about.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">About</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="contact.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
