--- a/videos.html
+++ b/videos.html
@@ -27,14 +27,14 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Main</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Fixtures</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Tables</Table></a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">News</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Videos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Leagues</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Clubs</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Sites</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="fixtures.html">Fixtures</a></li>
+                            <li class="nav-item"><a class="nav-link" href="tables.html">Tables</Table></a></li>
+                            <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                            <li class="nav-item"><a class="nav-link" href="videos.html">Videos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="leagues.html">Leagues</a></li>
+                            <li class="nav-item"><a class="nav-link" href="teams.html">Teams</a></li>
+                            <li class="nav-item"><a class="nav-link" href="sites.html">Sites</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -101,7 +101,44 @@
         </div>
         
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
+        <footer class="bg-dark py-4 mt-auto text-light">
+            <div class="text-center">
+                <h5 class="section-heading text-light">Site Map</h5>
+            </div>
+            <div class="container pt-2 mb-4">
+                <div class="row justify-content-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="index.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Main</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="fixtures.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Fixtures</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="tables.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Tables</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="news.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">News</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="videos.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Videos</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="leagues.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Leagues</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="teams.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Teams</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="sites.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Sites</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="about.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">About</a>
+                  </div>
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
+                    <a href="contact.html" class="badge bg-primary text-white d-flex align-items-center justify-content-center py-2 my-2">Contact</a>
+                  </div>
+                </div>
+              </div>
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
